--- a/lib/link_pool_web/components/layouts/root.html.heex
+++ b/lib/link_pool_web/components/layouts/root.html.heex
@@ -11,8 +11,8 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body>
-    <div class="navbar bg-base-100">
+  <body class="absolute bottom-0 left-0 right-0 top-0 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px]">
+    <div class="navbar bg-base-100 shadow-md">
       <div class="flex-1">
         <.link href={~p"/"} class="btn text-xl">
           LinkPool
