add emoji to pools

--- a/lib/link_pool_web/live/pool_live/index.html.heex
+++ b/lib/link_pool_web/live/pool_live/index.html.heex
@@ -35,7 +35,7 @@
     id={id}
   >
     <div class="flex justify-center pl-5 pt-10">
-      <span class="text-5xl">⚡️</span>
+      <span class="text-5xl"><%= pool.emoji %></span>
     </div>
     <div class="card-body">
       <h2 class="card-title"><%= pool.title %></h2>
