--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,4 +2,9 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+emoji-picker {
+  width: 100%;
+  height: 280px;
+  --num-columns: 14;
+}
 /* This file is for your main application CSS */
