--- a/lib/link_pool_web/live/pool_live/index.html.heex
+++ b/lib/link_pool_web/live/pool_live/index.html.heex
@@ -1,14 +1,23 @@
-<header class="flex items-center justify-between">
-  <h1 class="text-3xl font-bold">Hi 👋</h1>
+<header class="flex justify-between">
+  <div>
+    <h1 class="text-3xl font-bold">Hi 👋</h1>
+    <%= if @live_action in [:index, :my] do %>
+      <p>
+        You are seeing
+        <span class="font-bold"><%= if @page == :all, do: "all public", else: "your" %></span>
+        pools.
+      </p>
+    <% end %>
+  </div>
 
   <div>
-    <%= if @page == "all" do %>
-      <.link navigate={~p"/pools?my"}>
+    <%= if @page == :all do %>
+      <.link navigate={~p"/pools/my"}>
         <.button class="btn-primary">My Pools</.button>
       </.link>
     <% end %>
 
-    <%= if @page == "my" do %>
+    <%= if @page == :my do %>
       <.link navigate={~p"/pools"}>
         <.button class="btn-primary">All Pools</.button>
       </.link>
@@ -21,16 +30,18 @@
     <% end %>
 
     <%= if @live_action == :new do %>
-      <.link navigate={if @page == "my", do: ~p"/pools?my", else: ~p"/pools"}>
+      <.link patch={@back}>
         <.button>Go Back</.button>
       </.link>
     <% end %>
   </div>
 </header>
 
-<%= if @live_action == :index do %>
-  <main id="pools" phx-update="stream" class="grid grid-cols-1 gap-4 my-4">
-    <section id="songs-empty" class="only:flex hidden flex-col items-center gap-8 py-8">
+<main class={[
+  if(@live_action in [:index, :my], do: "block", else: "hidden")
+]}>
+  <section id="pools" phx-update="stream" class="grid grid-cols-1 gap-4 my-4">
+    <section id="pools-empty" class="only:flex hidden flex-col items-center gap-8 py-8">
       <img src="/images/open_box.svg" class="max-w-sm rounded-lg" />
       <h2 class="text-xl">No pools found</h2>
     </section>
@@ -65,11 +76,11 @@
         </div>
       </div>
     </section>
-  </main>
-<% end %>
+  </section>
+</main>
 
 <%= if @live_action in [:new, :edit] do %>
-  <main class="p-4 my-4 rounded-lg ">
+  <main class="my-4 rounded-lg">
     <.live_component
       module={LinkPoolWeb.PoolLive.FormComponent}
       id={@pool.id || :new}
@@ -77,7 +88,7 @@
       action={@live_action}
       pool={@pool}
       user_id={@user_id}
-      patch={~p"/pools"}
+      patch={@page_url}
     />
   </main>
 <% end %>
